[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="4", features=["derive"]}
dirs="4"
axum={version="0.6", features=["ws", "headers"]}
axum-extra={version="0.4", features=["spa"]}
headers="0.3"
tokio={versioin="1.23", features=["full"]}
tower={version="0.4", features=["util"]}
tower-http={version="0.3", features=["fs", "trace"]}
tracing="0.1"
tracing-subscriber={version="0.3", features=["env-filter"]}
